Fix: Google Sign-In 초기화 및 디버깅 로그 추가 (v2.5)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Firebase (Web Push) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer onload="console.log('✅ Google Sign-In 스크립트 로드 완료')"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
