--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta http-equiv="Expires" content="0">
     <title>인생관리시스템</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="styles.css?v=2.5">
+    <link rel="stylesheet" href="styles.css?v=2.6">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Lucide Icons 추가 -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Firebase (Web Push) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
-    <script src="https://accounts.google.com/gsi/client" async defer onload="console.log('✅ Google Sign-In 스크립트 로드 완료')"></script>
+    <!-- Google Sign-In 스크립트는 body 끝나기 전에 로드 (콜백 함수가 먼저 정의되어야 함) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
@@ -325,7 +325,10 @@
         </div>
     </div>
 
-    <script src="script.js?v=2.5"></script>
+    <!-- script.js를 먼저 로드하여 handleCredentialResponse 함수 정의 -->
+    <script src="script.js?v=2.6"></script>
+    <!-- 그 다음 Google Sign-In 스크립트 로드 -->
+    <script src="https://accounts.google.com/gsi/client" async defer onload="console.log('✅ Google Sign-In 스크립트 로드 완료'); if (typeof initializeGoogleSignIn === 'function') { setTimeout(initializeGoogleSignIn, 100); }"></script>
 </body>
 </html>
 
