Add: 메인 페이지에 관리자 페이지 링크 추가

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <!-- 헤더 -->
             <div class="header">
                 <h1>인생관리시스템</h1>
+                <div class="header-links">
+                    <a href="admin.html" class="admin-link" title="관리자 페이지">⚙️ 관리자</a>
+                </div>
                 <div class="user-section">
                     <div id="user-info" class="user-info hidden">
                         <img id="user-avatar" class="user-avatar" src="" alt="사용자 아바타">
