--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- 헤더 -->
             <div class="header">
                 <h1>인생관리시스템</h1>
-                <div class="header-links">
+                <div class="header-links" id="admin-link-container" style="display: none;">
                     <a href="admin.html" class="admin-link" title="관리자 페이지">⚙️ 관리자</a>
                 </div>
                 <div class="user-section">
