--- a/index.html
+++ b/index.html
@@ -9,18 +9,7 @@
     <meta http-equiv="Expires" content="0">
     <title>인생관리시스템</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="styles.css" id="main-stylesheet">
-    <script>
-        // CSS 캐시 방지를 위한 타임스탬프 추가
-        document.addEventListener('DOMContentLoaded', function() {
-            const stylesheet = document.getElementById('main-stylesheet');
-            if (stylesheet) {
-                const href = stylesheet.getAttribute('href');
-                const cacheBuster = '?v=' + new Date().getTime();
-                stylesheet.setAttribute('href', href + cacheBuster);
-            }
-        });
-    </script>
+    <link rel="stylesheet" href="styles.css?v=20251127001">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Lucide Icons 추가 -->
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -339,14 +328,8 @@
         </div>
     </div>
 
-    <!-- script.js를 캐시 방지와 함께 로드 -->
-    <script>
-        // 캐시 방지를 위한 타임스탬프 추가
-        const cacheBuster = '?v=' + new Date().getTime();
-        const script = document.createElement('script');
-        script.src = 'script.js' + cacheBuster;
-        document.body.appendChild(script);
-    </script>
+    <!-- script.js를 고정 버전으로 로드 (캐시 무효화) -->
+    <script src="script.js?v=20251127001"></script>
     <!-- 그 다음 Google Sign-In 스크립트 로드 -->
     <script src="https://accounts.google.com/gsi/client" async defer onload="console.log('✅ Google Sign-In 스크립트 로드 완료'); if (typeof initializeGoogleSignIn === 'function') { setTimeout(initializeGoogleSignIn, 100); }"></script>
 </body>
